-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.5.0, 5.5.1
-
Windows 7 x64 SP1
Qt 5.5.0 (msvc2013, official package), also reproduced on current 5.5.1 branch from sept 18th.
Desktop OpenGL (on latest official NVIDIA driver)
Two 1920x1080 monitors attached to same graphics card
-
10d311d9d244c3a6855dd654dcf9af4bbc7044b2 (qtbase/5.6, 16.11.2015, 5.6)
When a QtQuick.Control ComboBox's popup menu is made visible while its containing window was made visible on the second visitor of a multi-monitor setup, the popup menu is shown at the incorrect position (at the rightmost edge of the 1st monitor).
The attached screenshot shows the issue.
I've attached a minimal example showing the issue. It is simply a qml file containing
import QtQuick 2.5
import QtQuick.Window 2.2
import QtQuick.Controls 1.4
Window {
visible: true
ComboBox {
model: ["One", "Two", "Three"]
}
}
Just make sure that the Window appears on the second visitor when initially shown, then click on the combobox to reproduce the issue.
It appears that any of the following 'fixes' the issue:
- Moving the Window after it was initially shown (but before opening the combobox)
- Opening the combobox a second time
Also note the warning:
QSGThreadedRenderLoop: expose event received for window QQuickWindowQmlImpl(0x45804835b0) with invalid geometry: QRect(4000,200 264x160) on QScreen(0x45f8d75e30, name=\\.\DISPLAY1)
- is duplicated by
-
QTBUG-49988 WIndows/Quick: Submenu of application menu launched on secondary monitor is shown on primary monitor
-
- Closed
-
- relates to
-
QTBUG-40460 QWindow::screen might return wrong value on Windows
-
- Open
-
-
QTBUG-48378 QSGThreadedRenderLoop warning generated when Qml windows are shown on 2nd monitor
-
- Closed
-
| For Gerrit Dashboard: QTBUG-48379 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 140075,4 | Revert "qmlscene/qml tools: Temporarily disable High DPI options." | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 140374,3 | Windows/Direct2D: Handle screen changes after window creation. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |